--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ body {
 }
 
 .section-title::after {
-    content: url(title-underline.png);
+    /* content: url(title-underline.png); */
     position: absolute;
     top: 100%;
     left: 50%;
